force-app/main/default/objects/PortalFeed__c/PortalFeed__c.object-meta.xml
<CustomObject>
    <label>Portal Feed</label>
    <nameField>
        <label>Portal Feed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>