force-app/main/default/objects/PortalFeed__c/fields/portal_default__c.field-meta.xml
<CustomField>
    <fullName>portal_default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Default</label>
    <type>Checkbox</type>
</CustomField>