force-app/main/default/objects/PortalFeed__c/fields/portalMod_default__c.field-meta.xml
<CustomField>
    <fullName>portalMod_default__c</fullName>
    <label>portalMod_default</label>
    <type>DateTime</type>
</CustomField>