force-app/main/default/objects/PortalFeed__c/fields/SystemIsListedOnPortals__c.field-meta.xml
<CustomField>
    <fullName>SystemIsListedOnPortals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SystemIsListedOnPortals</label>
    <type>Checkbox</type>
</CustomField>