force-app/main/default/objects/PortalFeed__c/fields/SystemListing__c.field-meta.xml
<CustomField>
    <fullName>SystemListing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SystemListing</label>
    <referenceTo>Listing_hz__c</referenceTo>
    <relationshipLabel>Portal Feeds</relationshipLabel>
    <relationshipName>PortalFeeds</relationshipName>
    <type>Lookup</type>
</CustomField>