force-app/main/default/objects/PortalFeed__c/fields/SystemListingDeleteDate__c.field-meta.xml
<CustomField>
    <fullName>SystemListingDeleteDate__c</fullName>
    <label>SystemListingDeleteDate</label>
    <type>DateTime</type>
</CustomField>