force-app/main/default/objects/PortalFeed__c/fields/SystemListingIdDel__c.field-meta.xml
<CustomField>
    <fullName>SystemListingIdDel__c</fullName>
    <label>SystemListingIdDel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>