force-app/main/default/objects/PortalFeed__c/fields/SystemRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>SystemRecordTypeId__c</fullName>
    <formula>SystemListing__r.RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SystemRecordTypeId</label>
    <type>Text</type>
</CustomField>