force-app/main/default/objects/PortalFeed__c/fields/SystemRequestListOnPortals__c.field-meta.xml
<CustomField>
    <fullName>SystemRequestListOnPortals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SystemRequestListOnPortals</label>
    <type>Checkbox</type>
</CustomField>